# customer-context-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  customer_context_mcp_meeting_prep_requirements.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/src/: App.tsx  index.css
app/src/components/: AskPanel.tsx  BriefForm.tsx  Card.tsx  CustomerCard.tsx  EvidenceDrawer.tsx  ExecutiveSummary.tsx  Header.tsx  KeyTopics.tsx  Opportunities.tsx  RecentTimeline.tsx  RecommendedActions.tsx  Risks.tsx
app/src/lib/: api.ts  format.ts  types.ts
server/: README.md  pyproject.toml
server/customer_context_mcp/: __init__.py  cli.py  config.py  llm.py  server.py  store.py  types.py  ui_app.py  widget.py
server/customer_context_mcp/api/: app.py
server/customer_context_mcp/sources/: __init__.py  base.py  google_drive.py  notion.py  slack.py
server/customer_context_mcp/tools/: __init__.py  ask.py  brief.py  draft.py  evidence.py  search.py
