[project]
name = "customer-context-mcp"
version = "0.1.0"
description = "MCP server + iframe MCP App for customer meeting preparation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp-ui-server>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "anthropic>=0.40.0",
    "notion-client>=2.2.1",
    "slack-sdk>=3.33.0",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
customer-context-mcp = "customer_context_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["customer_context_mcp"]
